--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <a href="https://www.linkedin.com/in/shakti-singh-804514123/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="mailto:shakti.singh@example.com" aria-label="Email Contact">
+                        <a href="mailto:shaktisingh1996@gmail.com" aria-label="Email Contact">
                             <i class="fas fa-envelope"></i>
                         </a>
                     </div>
@@ -890,7 +890,7 @@
                     <a href="https://www.linkedin.com/in/shakti-singh-804514123/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="mailto:shakti.singh@example.com" aria-label="Email Contact">
+                    <a href="mailto:shaktisingh1996@gmail.com" aria-label="Email Contact">
                         <i class="fas fa-envelope"></i>
                     </a>
                 </div>
