--- a/index.html
+++ b/index.html
@@ -114,6 +114,15 @@
         ]
     }
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G813KWH4WX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-G813KWH4WX');
+    </script>
 </head>
 <body>
     <!-- Navigation -->
